Download Projects/ssu_score/#P1_20142468_v1.0/소스코드/ERR/20190018/11_error.txt
../../STD_DIR/20190018/11.c: In function 'ssu_signal':
../../STD_DIR/20190018/11.c:7:2: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
  printf("SIGUSR1 catched!!\n");
  ^~~~~~
../../STD_DIR/20190018/11.c:7:2: warning: incompatible implicit declaration of built-in function 'printf'
../../STD_DIR/20190018/11.c:7:2: note: include '<stdio.h>' or provide a declaration of 'printf'
../../STD_DIR/20190018/11.c: In function 'main':
../../STD_DIR/20190018/11.c:25:3: warning: implicit declaration of function 'fprintf' [-Wimplicit-function-declaration]
   fprintf(stderr, "fork error\n");
   ^~~~~~~
../../STD_DIR/20190018/11.c:25:3: warning: incompatible implicit declaration of built-in function 'fprintf'
../../STD_DIR/20190018/11.c:25:3: note: include '<stdio.h>' or provide a declaration of 'fprintf'
../../STD_DIR/20190018/11.c:25:11: error: 'stderr' undeclared (first use in this function); did you mean 'opterr'?
   fprintf(stderr, "fork error\n");
           ^~~~~~
           opterr
../../STD_DIR/20190018/11.c:25:11: note: each undeclared identifier is reported only once for each function it appears in
../../STD_DIR/20190018/11.c:31:5: warning: incompatible implicit declaration of built-in function 'printf'
     printf("child : SIGUSR1 pending\n");
     ^~~~~~
../../STD_DIR/20190018/11.c:31:5: note: include '<stdio.h>' or provide a declaration of 'printf'
../../STD_DIR/20190018/11.c:40:5: warning: incompatible implicit declaration of built-in function 'printf'
     printf("parent : SIGUSR1 pending\n");
     ^~~~~~
../../STD_DIR/20190018/11.c:40:5: note: include '<stdio.h>' or provide a declaration of 'printf'
sh: 1: ./11.stdexe: not found
